# trail_project

./: .gitignore  Makefile  pyproject.toml
dashboard/: urls.py  views.py
dashboard/static/css/: dashboard.css
dashboard/templates/dashboard/: dashboard.html  my_locations.html  my_spots.html  my_trails.html  mylocation_detail.html  myspot_detail.html  mytrail_detail.html
trail/: asgi.py  settings.py  urls.py  wsgi.py
trail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trail/auto-save-list/: .saves-3796-gabriela-X556UAM~
trail_app/: #models.py#  .#models.py  .models.swp  admin.py  decorators.py  forms.py  models.py  models.py.save  urls.py  views.py  views.py.save
trail_app/migrations/: 0001_initial.py  0002_auto_20200604_2127.py  0003_auto_20200609_2200.py  0004_trail_trail_location.py  0005_auto_20210211_2223.py  0006_auto_20210212_0341.py  0007_auto_20210216_0338.py  0008_auto_20210223_2239.py
trail_app/static/: style.css
trail_app/templates/: base.html  frontpage.html
trail_app/templates/trail_app/: base.html  location_detail.html  location_edit.html  location_new.html  locations_list.html  spot_detail.html  spot_edit.html  spot_new.html  spots_list.html  trail_detail.html  trail_edit.html  trail_new.html  trails_list.html
userprofile/: admin.py  models.py  urls.py  views.py
userprofile/migrations/: 0001_initial.py
userprofile/templates/userprofile/: edit_profile.html  login.html  myaccount.html  signup.html
