[tool.poetry]
name = "trail"
version = "0.1.0"
description = "Trail Demo"
authors = ["Gabriela Choy <<gabriela.choy@gmail.com>>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
django-bootstrap = "django-bootstrap"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
